# rt-embedded-mesh-chat

./: .gitignore  CMakeLists.txt  Makefile  README.md  project_dump.txt
include/: HashMap.h  client.h  gen_dlist.h  genqueue.h  limits.h  protocol.h  server.h  vector.h
src/: client_main.c  client_mng.c  client_net.c  client_ui.c  protocol.c  receiver.c  sender.c  server_main.c  server_mng.c  server_net.c
src/ds/: HashMap.c  gen_dlist.c  genqueue.c  vector.c
tests/: test_ds.c  test_framework.h  test_protocol.c  test_runner.c  test_server.c
